opam-version: "2.0"
name: "flog"
version: "0.1"
synopsis: "Lightweight and extendable OCaml logger with a composable, functional API."
description: """
Lightweight and extendable OCaml logger with a composable, functional API.
"""
maintainer: "Matt Harrison <matt.anthony.harrison@gmail.com>"
authors: "Matt Harrison <matt.anthony.harrison@gmail.com>"
license: "MIT"
homepage: "https://github.com/m-harrison/flog"
bug-reports: "https://github.com/m-harrison/flog/issues"
dev-repo: "https://github.com/m-harrison/flog"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "alcotest" {test}
  "dune" {build}
  "odoc" {build}
]


