opam-version: "2.0"
name: "monoidl"
version: "0.1"
synopsis: "Lightweight and plug-able OCaml logger with monoidal message consumers for composability."
description: """
Lightweight and plug-able OCaml logger with monoidal message consumers for composability.
"""
maintainer: "Matt Harrison <matt.anthony.harrison@gmail.com>"
authors: "Matt Harrison <matt.anthony.harrison@gmail.com>"
license: "MIT"
homepage: "https://github.com/m-harrison/monoidl"
bug-reports: "https://github.com/m-harrison/monoidl/issues"
dev-repo: "https://github.com/m-harrison/monoidl"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]
depends: [
  "alcotest" {test}
  "dune" {build}
  "odoc" {build}
]


